# autogen-jira

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agent/: __init__.py  jira_agent.py
app/api/: main.py
app/api/routes/: chart.py  chat.py  log.py  meas.py
app/core/: config.py  db.py
app/crud/: chat.py  token_use.py  tool_use.py
app/models/: __init__.py  chat.py  token_use.py  tool_use.py
app/static/css/: chat.css  log.css
app/static/templates/: chat.html  log.html  meas.html
app/tools/: __init__.py  _base.py  common.py  echarts.py
app/utils/: model_client.py  template.py
